Trying First version

--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-hello
+
+
+<meta charset="UTF-8">
+<style type="text/css">
+td{
+    background: none repeat scroll 0 0 #ADD8E6;
+    border: 1px solid #808080;
+    height: 50px;
+    text-align: center;
+    width: 50px;
+}
+
+td.today{
+    background: none repeat scroll 0 0 #FFD8E6;
+}
+.dinank{
+	font-size: 22px;
+}
+.pakshtext{
+	font-size: 10px;
+}
+
+#dayTable {
+    float: left;
+}
+
+
+
+</style>
+
+
+<div id="month"></div>
+<script src="jquery.min.js"></script>
+<script src="date.js"></script>
+
+
+<script src="a.js"></script>
+
+
