--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ td.today{
 
 
 <div id="month"></div>
+<div id="month2"></div>
 <script src="jquery.min.js"></script>
 <script src="date.js"></script>
 
